--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,10 @@
   <head>
     <title>React Automation Profiler Example App</title>
     <meta charset="utf-8"/>
-    <meta name="description" content="Example app that shows how to use the NPM package react-automation-profiler." />
+    <meta
+      name="description"
+      content="Example app that shows how to use the NPM package react-automation-profiler."
+    />
   </head>
   <body>
     <div id="root"></div>
